# Указываем инструменты сборки
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Метаданные проекта
[project]
name = "telegram-bot-project"
version = "1.0.0"
description = "A Telegram bot integrated with a database using SQLAlchemy and async tools."
authors = [
    {name = "Mikhail Tutko", email = "mikhail_tutko@bk.ru"}
]
license = {text = "MIT"}
dependencies = [
    "python-telegram-bot>=20.0",
    "asyncpg>=0.27.0",
    "psycopg2>=2.9.8",
    "SQLAlchemy>=2.0.0",
    "pydantic>=2.0.0",
    "alembic>=1.11.0",
    "alembic-utils>=0.8.0",
    "python-dateutil>=2.8.2",
    "dependency-injector>=4.40.0",
    "injector>=0.20.0"
]

# Конфигурация для инструментов разработки
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
strict = true
ignore_missing_imports = true
